# Wolf3D

./: .gitignore  CMakeLists.txt  Makefile
includes/: wolf3d.h
libft/: ft_arrnew.c  ft_chrcnt.c  ft_free2d.c  ft_free3d.c  ft_lstaddend.c  ft_lstdelemp.c  ft_lstpst.c  ft_lstsearch.c  ft_memcpy.c  ft_memset.c  ft_memswap.c  ft_realloc.c  ft_sqrtrup.c  ft_strccpy.c  ft_strlen.c  ft_strnlen.c  ft_strrev.c  ft_wrdcount.c  libft.h
libgm/include/: libgm.h
src/: controls.c  drawer.c  init_everything.c  main.c  raycasting.c  raycastmap.c  reader.c
test_map/: map.wf  map1.wf
